--- a/package.json
+++ b/package.json
@@ -12,9 +12,21 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^18.17.0",
-    "nuxt": "^3.6.5"
+    "nuxt": "^3.6.5",
+    "prisma": "^5.0.0"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.0.18"
+    "@headlessui/vue": "^1.7.15",
+    "@heroicons/vue": "^2.0.18",
+    "@prisma/client": "^5.0.0",
+    "@tailwindcss/forms": "^0.5.4",
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
+    "formidable": "^3.5.0",
+    "human-time": "^0.0.2",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
+    "mitt": "^3.0.1",
+    "url-pattern": "^1.0.3"
   }
 }
